tests/baselines/reference/fixingTypeParametersRepeatedly1(strict=true).errors.txt
fixingTypeParametersRepeatedly1.ts(2,12): error TS2322: Type 'null' is not assignable to type 'string'.
fixingTypeParametersRepeatedly1.ts(6,18): error TS7010: 'g', which lacks return-type annotation, implicitly has an 'any' return type.
fixingTypeParametersRepeatedly1.ts(7,12): error TS2322: Type 'null' is not assignable to type 'string'.


==== fixingTypeParametersRepeatedly1.ts (3 errors) ====
    declare function f<T>(x: T, y: (p: T) => T, z: (p: T) => T): T;
    f("", x => null, x => x.toLowerCase());
               ~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
!!! related TS6502 fixingTypeParametersRepeatedly1.ts:1:32: The expected type comes from the return type of this signature.
    
    // First overload of g should type check just like f
    declare function g<T>(x: T, y: (p: T) => T, z: (p: T) => T): T;
    declare function g();
                     ~
!!! error TS7010: 'g', which lacks return-type annotation, implicitly has an 'any' return type.
    g("", x => null, x => x.toLowerCase());
               ~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
!!! related TS6502 fixingTypeParametersRepeatedly1.ts:5:32: The expected type comes from the return type of this signature.